Added "now playing" activity to display movies currently in theaters.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,10 +37,9 @@
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/search"
+            android:drawableStart="@drawable/search"
             android:elevation="10dp"
             android:fontFamily="sans-serif-condensed"
-            android:stateListAnimator="@null"
             android:text="@string/search_for_a_movie_by_title"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -54,15 +53,15 @@
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/discover"
+            android:drawableStart="@drawable/discover"
             android:elevation="10dp"
             android:fontFamily="sans-serif-condensed"
-            android:stateListAnimator="@null"
             android:text="@string/discover_a_new_movie"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/watch_list_btn"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/search_by_title_Btn" />
 
@@ -72,10 +71,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="28dp"
-            android:drawableLeft="@drawable/watchlist"
+            android:drawableStart="@drawable/watchlist"
             android:elevation="10dp"
             android:fontFamily="sans-serif-condensed"
-            android:stateListAnimator="@null"
             android:text="@string/watchlist"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -99,16 +97,30 @@
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/rate"
+            android:drawableStart="@drawable/rate"
             android:elevation="10dp"
             android:fontFamily="sans-serif-condensed"
-            android:stateListAnimator="@null"
             android:text="@string/ratings"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/watch_list_btn" />
+
+        <Button
+            android:id="@+id/nowPlaying_btn"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/playing"
+            android:elevation="10dp"
+            android:fontFamily="sans-serif-condensed"
+            android:text="@string/now_playing"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ratings_btn" />
 
     </android.support.constraint.ConstraintLayout>
 
