--- a/app/src/main/res/menu/menu_toolbar.xml
+++ b/app/src/main/res/menu/menu_toolbar.xml
@@ -42,6 +42,12 @@
                 app:showAsAction="ifRoom"
                 />
 
+            <item
+                android:id="@+id/action_playing"
+                android:icon="@drawable/playing"
+                android:title="@string/playing"
+                app:showAsAction="ifRoom"
+                />
         </menu>
     </item>
 </menu>
