--- a/app/src/main/res/layout/layout_listitem.xml
+++ b/app/src/main/res/layout/layout_listitem.xml
@@ -13,9 +13,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="2dp"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="1dp"
-        android:layout_marginEnd="2dp"
+        android:layout_marginEnd="4dp"
         android:layout_marginBottom="1dp"
         card_view:cardCornerRadius="0dp"
         card_view:cardElevation="0dp"
@@ -29,6 +29,7 @@
                 android:id="@+id/circularImageView"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
+                android:layout_margin="2dp"
                 android:src="@drawable/logo" />
 
             <TextView
@@ -42,7 +43,7 @@
                 android:layout_toRightOf="@id/circularImageView"
                 android:text="@string/test"
                 android:textColor="#000"
-                android:textSize="16sp" />
+                android:textSize="18sp" />
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
