--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -21,5 +21,9 @@
             android:id="@+id/nav_ratings"
             android:icon="@drawable/rate"
             android:title="@string/ratings" />
+        <item
+            android:id="@+id/nav_playing"
+            android:icon="@drawable/playing"
+            android:title="@string/playing" />
     </group>
 </menu>
