Improved UI for watchlist, ratings, etc.

--- a/app/src/main/res/layout/activity_actor_info.xml
+++ b/app/src/main/res/layout/activity_actor_info.xml
@@ -35,9 +35,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/known_for"
-                android:textColor="@color/colorAccent"
+                android:textColor="@android:color/black"
                 android:textSize="24sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/knownFor_recyclerView"
