--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -74,10 +74,10 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginBottom="8dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="4dp"
                     android:text="@string/similar_movies"
-                    android:textColor="@color/colorAccent"
+                    android:textColor="@android:color/black"
                     android:textSize="36sp"
                     android:textStyle="bold" />
 
@@ -94,10 +94,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginBottom="16dp"
+                    android:layout_marginTop="4dp"
                     android:text="@string/movie_info"
-                    android:textColor="@color/colorAccent"
+                    android:textColor="@android:color/black"
                     android:textSize="36sp"
                     android:textStyle="bold" />
 
@@ -275,10 +274,10 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="4dp"
                     android:layout_marginBottom="2dp"
                     android:text="@string/cast"
-                    android:textColor="@color/colorAccent"
+                    android:textColor="@android:color/black"
                     android:textSize="36sp"
                     android:textStyle="bold" />
 
