--- a/app/src/main/res/layout/activity_watch_list_display.xml
+++ b/app/src/main/res/layout/activity_watch_list_display.xml
@@ -19,6 +19,13 @@
             android:id="@+id/watch_list_toolbar"
             layout="@layout/my_toolbar"/>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Watchlist"
+            android:textColor="@android:color/black"
+            android:textSize="36sp" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/watch_list_recyclerView"
