--- a/app/src/main/res/layout/activity_watch_list_display.xml
+++ b/app/src/main/res/layout/activity_watch_list_display.xml
@@ -27,12 +27,22 @@
             android:textColor="@android:color/black"
             android:textSize="36sp" />
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorMovieDBgreen" />
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/watch_list_recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
         </android.support.v7.widget.RecyclerView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorMovieDBgreen" />
 
     </LinearLayout>
 
