--- a/app/src/main/res/layout/activity_actor_info.xml
+++ b/app/src/main/res/layout/activity_actor_info.xml
@@ -39,6 +39,11 @@
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorMovieDBgreen" />
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/knownFor_recyclerView"
                 android:layout_width="match_parent"
@@ -46,6 +51,12 @@
                 android:orientation="horizontal"
                 >
             </android.support.v7.widget.RecyclerView>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorMovieDBgreen" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
