--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -89,7 +89,6 @@
 
                 </android.support.v7.widget.RecyclerView>
 
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -281,6 +280,12 @@
                     android:textSize="36sp"
                     android:textStyle="bold" />
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/colorMovieDBgreen"
+                    />
+
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/details_recyclerView"
                     android:layout_width="match_parent"
@@ -288,6 +293,13 @@
                     android:orientation="vertical">
 
                 </android.support.v7.widget.RecyclerView>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/colorMovieDBgreen"
+                    />
+
             </LinearLayout>
         </ScrollView>
 
