--- a/app/src/main/res/layout/activity_now_playing_display.xml
+++ b/app/src/main/res/layout/activity_now_playing_display.xml
@@ -32,6 +32,11 @@
                 android:textColor="@android:color/black"
                 android:textSize="36sp" />
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorMovieDBgreen" />
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/playing_recyclerview"
                 android:layout_width="match_parent"
@@ -41,17 +46,33 @@
 
             <TextView
                 android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorMovieDBgreen" />
+
+            <TextView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Upcoming Movies"
                 android:textColor="@android:color/black"
                 android:textSize="36sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorMovieDBgreen" />
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/upcoming_recyclerview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 >
             </android.support.v7.widget.RecyclerView>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorMovieDBgreen" />
 
         </LinearLayout>
     </ScrollView>
