Changed main screen button colors, added vector assets to improve visual quality

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,8 +35,8 @@
             android:layout_marginStart="2dp"
             android:layout_marginEnd="2dp"
             android:layout_marginBottom="2dp"
-            android:background="@color/colorAccent"
-            android:drawableStart="@drawable/search"
+            android:background="@color/colorMovieDBgreen"
+            android:drawableStart="@drawable/ic_search_black_48dp"
             android:elevation="10dp"
             android:fontFamily="sans-serif-condensed"
             android:text="@string/search_for_a_movie_by_title"
@@ -51,8 +51,8 @@
             android:layout_marginStart="2dp"
             android:layout_marginEnd="2dp"
             android:layout_marginBottom="2dp"
-            android:background="@color/colorAccent"
-            android:drawableStart="@drawable/discover"
+            android:background="@color/colorMovieDBgreen"
+            android:drawableStart="@drawable/ic_explore_black_48dp"
             android:elevation="10dp"
             android:fontFamily="sans-serif-condensed"
             android:text="@string/discover_a_new_movie"
@@ -67,8 +67,8 @@
             android:layout_marginStart="2dp"
             android:layout_marginEnd="2dp"
             android:layout_marginBottom="2dp"
-            android:background="@color/colorAccent"
-            android:drawableStart="@drawable/watchlist"
+            android:background="@color/colorMovieDBgreen"
+            android:drawableStart="@drawable/ic_bookmark_border_black_48dp"
             android:elevation="10dp"
             android:fontFamily="sans-serif-condensed"
             android:text="@string/watchlist"
@@ -83,8 +83,8 @@
             android:layout_marginStart="2dp"
             android:layout_marginEnd="2dp"
             android:layout_marginBottom="2dp"
-            android:background="@color/colorAccent"
-            android:drawableStart="@drawable/rate"
+            android:background="@color/colorMovieDBgreen"
+            android:drawableStart="@drawable/ic_stars_white_48dp"
             android:elevation="10dp"
             android:fontFamily="sans-serif-condensed"
             android:text="@string/ratings"
@@ -99,8 +99,8 @@
             android:layout_marginStart="2dp"
             android:layout_marginEnd="2dp"
             android:layout_marginBottom="40dp"
-            android:background="@color/colorAccent"
-            android:drawableStart="@drawable/playing"
+            android:background="@color/colorMovieDBgreen"
+            android:drawableStart="@drawable/ic_local_movies_white_48dp"
             android:elevation="10dp"
             android:fontFamily="sans-serif-condensed"
             android:text="@string/now_playing"
@@ -112,7 +112,7 @@
             android:layout_width="160dp"
             android:layout_height="160dp"
             android:layout_gravity="center"
-            app:srcCompat="@drawable/logo" />
+            app:srcCompat="@drawable/ic_logo" />
 
     </LinearLayout>
 
