--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,4 +32,9 @@
         <item name="android:textColor">#000000</item>
         <item name="android:textColorPrimary">#595959</item>
     </style>
+
+    <style name="TextAppearance.Widget.ActionBar.Title"
+        parent="@android:style/TextAppearance.Large">
+    </style>
+
 </resources>
