Changed layout for main screen, use grid of buttons instead. Changed coloring of some text in details activity

--- a/app/src/main/res/layout/activity_actor_info.xml
+++ b/app/src/main/res/layout/activity_actor_info.xml
@@ -36,7 +36,7 @@
                 android:layout_gravity="center"
                 android:text="@string/known_for"
                 android:textColor="@android:color/black"
-                android:textSize="24sp"
+                android:textSize="36sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -158,11 +158,17 @@
                     android:id="@+id/bioBase_textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="#000"
+                    android:layout_gravity="center"
                     android:layout_marginStart="8dp"
-                    android:textSize="22sp"
                     android:text="@string/bio"
-                    android:textStyle="bold"/>
+                    android:textColor="#000"
+                    android:textSize="36sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="@color/colorMovieDBgreen" />
                 <TextView
                     android:id="@+id/biography_textView"
                     android:layout_width="wrap_content"
