--- a/app/src/main/res/layout/activity_display_results.xml
+++ b/app/src/main/res/layout/activity_display_results.xml
@@ -1,73 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/display_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/display_drawer_layout"
     android:fitsSystemWindows="true">
 
-
-    <LinearLayout
+    <ScrollView
+        android:id="@+id/details_scrollview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".DisplayResults"
-        android:orientation="vertical"
-        >
+        android:layout_height="match_parent">
 
-        <include layout="@layout/my_toolbar"/>
 
-        <EditText
-            android:id="@+id/movie_search_editText"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:ems="10"
-            android:hint="@string/enter_movie_title_to_search"
-            android:inputType=""
-            android:maxLines="1" />
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            tools:context=".DisplayResults">
 
-        <Button
-            android:id="@+id/search_Btn"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="18dp"
-            android:background="@color/colorAccent"
-            android:text="@string/search" />
 
-        <Button
-            android:id="@+id/empty_Btn"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginBottom="2dp"
-            android:background="@color/colorAccent"
-            android:text="@string/reset" />
+            <include layout="@layout/my_toolbar" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorMovieDBgreen" />
+            <EditText
+                android:id="@+id/movie_search_editText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:ems="10"
+                android:hint="@string/enter_movie_title_to_search"
+                android:inputType=""
+                android:maxLines="1" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            <Button
+                android:id="@+id/search_Btn"
+                style="?android:attr/buttonBarButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="18dp"
+                android:background="@color/colorAccent"
+                android:text="@string/search" />
 
-        </android.support.v7.widget.RecyclerView>
+            <Button
+                android:id="@+id/empty_Btn"
+                style="?android:attr/buttonBarButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="2dp"
+                android:background="@color/colorAccent"
+                android:text="@string/reset" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorMovieDBgreen" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorMovieDBgreen" />
 
-    </LinearLayout>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
+            </android.support.v7.widget.RecyclerView>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorMovieDBgreen" />
+
+        </LinearLayout>
+    </ScrollView>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/navView"
@@ -76,7 +81,7 @@
         android:layout_gravity="start"
         android:background="@android:color/white"
         android:fitsSystemWindows="true"
-        app:menu="@menu/drawer_view"
-        app:headerLayout="@layout/nav_header"/>
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/drawer_view" />
 
 </android.support.v4.widget.DrawerLayout>
