--- a/app/src/main/res/layout/activity_filter_results.xml
+++ b/app/src/main/res/layout/activity_filter_results.xml
@@ -1,135 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/filter_drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <ScrollView
+        android:id="@+id/details_scrollview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".DisplayResults"
-        tools:layout_editor_absoluteY="25dp">
+        android:layout_height="match_parent">
 
-        <include
-            android:id="@+id/filter_toolbar"
-            layout="@layout/my_toolbar"
-            />
-
-        <Spinner
-            android:id="@+id/sortBy_spinner"
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_below="@id/filter_toolbar"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp" />
+            android:layout_height="match_parent"
+            tools:context=".DisplayResults"
+            tools:layout_editor_absoluteY="25dp">
 
-        <Spinner
-            android:id="@+id/rating_spinner"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_below="@id/sortBy_spinner"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp" />
+            <include
+                android:id="@+id/filter_toolbar"
+                layout="@layout/my_toolbar" />
 
-        <Spinner
-            android:id="@+id/genre_spinner"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_below="@id/rating_spinner"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp" />
+            <Spinner
+                android:id="@+id/sortBy_spinner"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_below="@id/filter_toolbar"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp" />
+
+            <Spinner
+                android:id="@+id/rating_spinner"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_below="@id/sortBy_spinner"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp" />
+
+            <Spinner
+                android:id="@+id/genre_spinner"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_below="@id/rating_spinner"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp" />
 
 
-        <Button
-            android:id="@+id/filterSearch_btn"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/search_edit_text"
-            android:layout_centerHorizontal="true"
-            android:text="@string/search" />
-
-        <TextView
-            android:id="@+id/border1"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorMovieDBgreen"
-            android:layout_below="@+id/filterSearch_btn"/>
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/filterRecyclerView"
-            android:layout_width="370dp"
-            android:layout_height="279dp"
-            android:layout_below="@id/border1"
-            android:layout_centerHorizontal="true"
-            />
-
-        <TextView
-            android:id="@+id/border2"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorMovieDBgreen"
-            android:layout_below="@+id/filterRecyclerView"/>
-
-        <Button
-            android:id="@+id/empty_btn"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/search_edit_text"
-            android:layout_alignTop="@+id/filterSearch_btn"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="0dp"
-            android:text="@string/reset" />
-
-        <EditText
-            android:id="@+id/search_edit_text"
-            android:layout_width="222dp"
-            android:layout_height="54dp"
-            android:layout_below="@+id/year_edit_text"
-            android:layout_marginStart="8dp"
-            android:ems="10"
-            android:hint="@string/enter_actor_name"
-            android:inputType="textPersonName" />
-
-        <EditText
-            android:id="@+id/year_edit_text"
-            android:layout_width="120dp"
-            android:layout_height="45dp"
-            android:layout_below="@id/genre_spinner"
-            android:layout_marginStart="8dp"
-            android:ems="10"
-            android:hint="@string/enter_year" />
-        <RadioGroup
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_toEndOf="@id/year_edit_text"
-            android:layout_below="@id/genre_spinner">
-
-            <RadioButton
-                android:id="@+id/before_radio"
+            <Button
+                android:id="@+id/filterSearch_btn"
+                style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/before" />
+                android:layout_below="@+id/search_edit_text"
+                android:layout_centerHorizontal="true"
+                android:text="@string/search" />
 
-            <RadioButton
-                android:id="@+id/after_radio"
+            <TextView
+                android:id="@+id/border1"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@+id/filterSearch_btn"
+                android:background="@color/colorMovieDBgreen" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/filterRecyclerView"
+                android:layout_width="370dp"
+                android:layout_height="279dp"
+                android:layout_below="@id/border1"
+                android:layout_centerHorizontal="true" />
+
+            <TextView
+                android:id="@+id/border2"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@+id/filterRecyclerView"
+                android:background="@color/colorMovieDBgreen" />
+
+            <Button
+                android:id="@+id/empty_btn"
+                style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/search_edit_text"
+                android:layout_alignTop="@+id/filterSearch_btn"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="0dp"
+                android:text="@string/reset" />
+
+            <EditText
+                android:id="@+id/search_edit_text"
+                android:layout_width="222dp"
+                android:layout_height="54dp"
+                android:layout_below="@+id/year_edit_text"
+                android:layout_marginStart="8dp"
+                android:ems="10"
+                android:hint="@string/enter_actor_name"
+                android:inputType="textPersonName" />
+
+            <EditText
+                android:id="@+id/year_edit_text"
+                android:layout_width="120dp"
+                android:layout_height="45dp"
+                android:layout_below="@id/genre_spinner"
+                android:layout_marginStart="8dp"
+                android:ems="10"
+                android:hint="@string/enter_year" />
+
+            <RadioGroup
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/genre_spinner"
+                android:layout_toEndOf="@id/year_edit_text"
+                android:orientation="horizontal">
+
+                <RadioButton
+                    android:id="@+id/before_radio"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/before" />
+
+                <RadioButton
+                    android:id="@+id/after_radio"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
 
 
-                android:layout_marginEnd="8dp"
-                android:text="@string/after" />
-        </RadioGroup>
+                    android:layout_marginEnd="8dp"
+                    android:text="@string/after" />
+            </RadioGroup>
 
-    </RelativeLayout>
+        </RelativeLayout>
+    </ScrollView>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/navView"
@@ -138,7 +142,7 @@
         android:layout_gravity="start"
         android:background="@android:color/white"
         android:fitsSystemWindows="true"
-        app:menu="@menu/drawer_view"
-        app:headerLayout="@layout/nav_header"/>
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/drawer_view" />
 
 </android.support.v4.widget.DrawerLayout>
