--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/details_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -77,7 +78,7 @@
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="4dp"
                     android:text="@string/similar_movies"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/colorMovieDBgreen"
                     android:textSize="36sp"
                     android:textStyle="bold" />
 
@@ -95,9 +96,14 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="4dp"
                     android:text="@string/movie_info"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/colorMovieDBgreen"
                     android:textSize="36sp"
                     android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="@color/colorMovieDBgreen" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -252,11 +258,17 @@
                         android:id="@+id/overviewBase_textView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center"
                         android:layout_marginStart="8dp"
                         android:text="@string/overview"
-                        android:textColor="#000"
-                        android:textSize="22sp"
+                        android:textColor="@color/colorMovieDBgreen"
+                        android:textSize="36sp"
                         android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:background="@color/colorMovieDBgreen" />
 
                     <TextView
                         android:id="@+id/overview_textView"
@@ -276,7 +288,7 @@
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="2dp"
                     android:text="@string/cast"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/colorMovieDBgreen"
                     android:textSize="36sp"
                     android:textStyle="bold" />
 
