--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,9 +45,10 @@
                 android:layout_marginBottom="2dp"
                 android:layout_weight="1"
                 app:cardBackgroundColor="@color/colorMovieDBgreen"
-                card_view:cardCornerRadius="0dp"
-                card_view:cardElevation="0dp"
-                card_view:cardUseCompatPadding="false">
+                card_view:cardCornerRadius="6dp"
+                card_view:cardElevation="6dp"
+                card_view:cardUseCompatPadding="false"
+                android:foreground="?android:attr/selectableItemBackground">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -68,7 +69,7 @@
                         android:text="@string/search_for_a_movie_by_title"
                         android:textAllCaps="true"
                         android:textColor="@android:color/white"
-                        android:textSize="24sp" />
+                        android:textSize="30sp" />
                 </LinearLayout>
 
             </android.support.v7.widget.CardView>
@@ -82,9 +83,10 @@
                 android:layout_marginBottom="2dp"
                 android:layout_weight="1"
                 app:cardBackgroundColor="@color/colorMovieDBgreen"
-                card_view:cardCornerRadius="0dp"
-                card_view:cardElevation="0dp"
-                card_view:cardUseCompatPadding="false">
+                card_view:cardCornerRadius="6dp"
+                card_view:cardElevation="6dp"
+                card_view:cardUseCompatPadding="false"
+                android:foreground="?android:attr/selectableItemBackground">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -105,7 +107,7 @@
                         android:text="@string/discover_a_new_movie"
                         android:textAllCaps="true"
                         android:textColor="@android:color/white"
-                        android:textSize="24sp" />
+                        android:textSize="30sp" />
                 </LinearLayout>
 
             </android.support.v7.widget.CardView>
@@ -129,9 +131,10 @@
                 android:layout_marginBottom="2dp"
                 android:layout_weight="1"
                 app:cardBackgroundColor="@color/colorMovieDBgreen"
-                card_view:cardCornerRadius="0dp"
+                card_view:cardCornerRadius="6dp"
                 card_view:cardElevation="0dp"
-                card_view:cardUseCompatPadding="false">
+                card_view:cardUseCompatPadding="false"
+                android:foreground="?android:attr/selectableItemBackground">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -152,7 +155,7 @@
                         android:text="@string/watchlist"
                         android:textAllCaps="true"
                         android:textColor="@android:color/white"
-                        android:textSize="24sp" />
+                        android:textSize="30sp" />
                 </LinearLayout>
 
             </android.support.v7.widget.CardView>
@@ -166,9 +169,10 @@
                 android:layout_marginBottom="2dp"
                 android:layout_weight="1"
                 app:cardBackgroundColor="@color/colorMovieDBgreen"
-                card_view:cardCornerRadius="0dp"
+                card_view:cardCornerRadius="6dp"
                 card_view:cardElevation="0dp"
-                card_view:cardUseCompatPadding="false">
+                card_view:cardUseCompatPadding="false"
+                android:foreground="?android:attr/selectableItemBackground">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -189,7 +193,7 @@
                         android:text="@string/ratings"
                         android:textAllCaps="true"
                         android:textColor="@android:color/white"
-                        android:textSize="24sp" />
+                        android:textSize="30sp" />
                 </LinearLayout>
 
             </android.support.v7.widget.CardView>
@@ -211,9 +215,10 @@
                 android:layout_marginBottom="2dp"
                 android:layout_weight="1"
                 app:cardBackgroundColor="@color/colorMovieDBgreen"
-                card_view:cardCornerRadius="0dp"
+                card_view:cardCornerRadius="6dp"
                 card_view:cardElevation="0dp"
-                card_view:cardUseCompatPadding="false">
+                card_view:cardUseCompatPadding="false"
+                android:foreground="?android:attr/selectableItemBackground">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -234,7 +239,7 @@
                         android:text="@string/now_playing"
                         android:textAllCaps="true"
                         android:textColor="@android:color/white"
-                        android:textSize="24sp" />
+                        android:textSize="30sp" />
                 </LinearLayout>
 
             </android.support.v7.widget.CardView>
@@ -248,9 +253,10 @@
                 android:layout_marginBottom="2dp"
                 android:layout_weight="1"
                 app:cardBackgroundColor="@color/colorMovieDBgreen"
-                card_view:cardCornerRadius="0dp"
+                card_view:cardCornerRadius="6dp"
                 card_view:cardElevation="0dp"
-                card_view:cardUseCompatPadding="false">
+                card_view:cardUseCompatPadding="false"
+                android:foreground="?android:attr/selectableItemBackground">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -262,7 +268,7 @@
                         android:layout_height="80dp"
                         android:layout_gravity="center"
                         android:layout_marginTop="24dp"
-                        app:srcCompat="@drawable/ic_local_movies_white_48dp" />
+                        app:srcCompat="@drawable/ic_whatshot_black_24dp" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -271,7 +277,7 @@
                         android:text="@string/trending"
                         android:textAllCaps="true"
                         android:textColor="@android:color/white"
-                        android:textSize="24sp" />
+                        android:textSize="30sp" />
                 </LinearLayout>
 
             </android.support.v7.widget.CardView>
@@ -288,7 +294,9 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="This product uses the TMDb API but is not endorsed or certified by TMDb."/>
+            android:layout_marginStart="2dp"
+            android:layout_marginEnd="2dp"
+            android:text="This product uses the TMDb API but is not endorsed or certified by TMDb." />
     </LinearLayout>
 
 
